--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -14,7 +14,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 
-  <link rel="icon" type="image/png" href="{% static 'portfolio/Logo2.png' %}">
+  <link rel="icon" type="image/png" href="{% static 'portfolio/Logo.png' %}">
 
   <title>Vasudeo Gaichor</title>
 </head>
@@ -24,7 +24,7 @@
   <nav id="topNav" class="navbar navbar-expand-md navbar-light">
     <div class="container">
       <a class="navbar-brand" href="{% url 'home' %}">
-        <img src="{% static "portfolio/Logo2.png" %}" width="30" height="30" class="d-inline-block align-top" alt="vasu's logo">
+        <img src="{% static "portfolio/Logo.png" %}" width="30" height="30" class="d-inline-block align-top" alt="vasu's logo">
         <span>Vasudeo Gaichor</span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
