--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -33,10 +33,10 @@
       <div class="collapse navbar-collapse text-center" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="{% static 'portfolio/Vasudeo_Gaichor_Updated.pdf' %}">Resume</a>
+            <a class="nav-link" href="{% static 'portfolio/Vasudeo_Resume.pdf' %}">Resume</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://www.linkedin.com/in/vasudeo-gaichor-9a4b361a1" target="_blank">LinkedIn</a>
+            <a class="nav-link" href="https://www.linkedin.com/in/vasudeo-gaichor" target="_blank">LinkedIn</a>
           </li>
           <li>
             <a role="button" href="{% url 'blog:all_blogs' %}" class="btn btn-primary">Blog</a>
